--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,17 @@
 .card {
-    border: 1px solid black;
-    margin: 2rem;
-    padding: 2rem;
-    display: inline-block;
+  border-radius: 0.5rem;
+  margin: 1rem;
+  padding: 1rem;
+  display: inline-block;
+  width: 140px;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.4);
+  user-select: none;
+  img {
+    width: 100%;
+  }
+  span {
+    display: block;
+    text-align: center;
+    margin-top: 0.5rem;
+  }
 }
